# Orcalib

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.agents/: AGENTS.md
.github/workflows/: ci.yml
docs/foundation/: 01-VISION.md  02-ARCHITECTURE.md  03-CODING-STANDARDS.md  04-RFC-PROCESS.md  05-ROADMAP.md  06-AI-COLLABORATION-GUIDE.md
examples/basics/: benchmark_cpu.py  benchmark_gpu.py  benchmark_matmul_only.py  benchmark_mlp_cpu_gpu.py  debug.py  test_bn.py  test_conv.py  test_conv_full.py  test_gpu.py  test_grad_check.py
examples/cv/: train_cnn.py
examples/mnist/: mnist_model.pkl  mnist_model.safetensors  test_model.py  train_mnist.py
examples/nlp/: train_transformer.py
examples/xor/: test_xor.py  test_xor_batch.py
orca-autograd/: Cargo.toml
orca-autograd/src/: backend.rs  lib.rs  tape.rs  tensor.rs
orca-autograd/tests/: autograd_tests.rs
orca-backend-cpu/: Cargo.toml
orca-backend-cpu/src/: backend.rs  lib.rs  math.rs  storage.rs
orca-backend-gpu/: Cargo.toml
orca-backend-gpu/src/: backend.rs  lib.rs  pool.rs  storage.rs
orca-backend-gpu/src/shaders/: binary.wgsl  broadcast.wgsl  check_nan_inf.wgsl  conv2d.wgsl  conv2d_bw.wgsl  gather.wgsl  gather_backward.wgsl  grad.wgsl  matmul.wgsl  reduce.wgsl  reduce_max.wgsl  reduce_max_backward.wgsl  reduce_scalar.wgsl  reduce_scalar_pass1.wgsl  reduce_scalar_pass2.wgsl  scalar.wgsl  scatter.wgsl  scatter_backward_base.wgsl  transpose.wgsl  unary.wgsl
orca-core/: Cargo.toml
orca-core/src/: device.rs  dtype.rs  error.rs  lib.rs  shape.rs
orca-python/: Cargo.toml
orca-python/src/: lib.rs
orca-serialize/: Cargo.toml
orca-serialize/src/: lib.rs
orca-tensor/: Cargo.toml
orca-tensor/src/: backend.rs  lib.rs  tensor.rs
python/orca/: __init__.py  __init__.pyi  autocast.py  core.py  tensor.py  tensor.pyi
python/orca/data/: __init__.py  dataloader.py  transforms.py
python/orca/hf/: __init__.py  loader.py
python/orca/nn/: __init__.py  activation.py  attention.py  container.py  conv.py  dropout.py  embedding.py  flatten.py  init.py  linear.py  loss.py  model.py  module.py  normalization.py  parameter.py  pooling.py  transformer.py
python/orca/onnx/: __init__.py  exporter.py  importer.py
python/orca/optim/: __init__.py  adam.py  adamw.py  clip.py  lr_scheduler.py  optimizer.py  sgd.py
python/orca/zoo/: __init__.py  bert.py  gpt2.py  resnet.py
python/tests/: stress_onnx.py  stress_zoo.py  test_api.py  test_onnx.py  test_zoo.py
