[package]
name = "orca-autograd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Tape-based automatic differentiation for the Orca framework"

[dependencies]
orca-core = { path = "../orca-core" }
orca-tensor = { path = "../orca-tensor" }

[dev-dependencies]
orca-backend-cpu = { path = "../orca-backend-cpu" }
bytemuck = "1.15.0"
